--- a/resources/css/scss/base/_variables.scss
+++ b/resources/css/scss/base/_variables.scss
@@ -14,7 +14,7 @@ $color-black: #000;
 $color-white: #fff;
 $color-grey: #4B4B4B; 
 $color-dark: #262626; //1a1818
-$color-light: #E8E8E8;
+$color-light: #949494;
 
 $color-lblue: #29BCFC;
 $color-dblue: #3889FF;;
