--- a/style.css
+++ b/style.css
@@ -3,8 +3,9 @@
 ** Theme URI: https://mybizniche.com/
 ** Author: Mybizniche
 ** Author URI: https://mybizniche.com/
-** Version: 1.0
+** Version: 1.0.1
 */
 
-
-
+.about-sec-2 {
+	padding-top: 79px;
+}
