--- a/resources/css/scss/base/_buttons.scss
+++ b/resources/css/scss/base/_buttons.scss
@@ -9,7 +9,7 @@
     line-height: 28px;
     transition:all 0.5s ease;
     border-radius: 0;
-    min-width: 240px;
+    // min-width: 240px;
     letter-spacing: 0.11em;
 
     &:hover {
