--- a/resources/css/scss/base/_typography.scss
+++ b/resources/css/scss/base/_typography.scss
@@ -144,9 +144,11 @@ img{
     height: auto;
 }
 
-p{
+p {
     line-height: 1.6;
     margin-bottom: 20px; 
+    overflow-wrap: break-word;
+    
     &.large {
         font-size: 20px;
     }
