--- a/resources/css/scss/base/_utilities.scss
+++ b/resources/css/scss/base/_utilities.scss
@@ -1,4 +1,18 @@
 
+
+@media screen and (max-width: 39.99875em) {
+	.hide-for-xsmall-only {
+	  display: none !important;
+	}
+  }
+  
+  @media screen and (max-width: 0em), screen and (min-width: 40em) {
+	.show-for-xsmall-only {
+	  display: none !important;
+	}
+  }
+
+
 //Text color
 .text-primary {
     color:$color-primary
@@ -8,6 +22,11 @@
 }
 .text-warning {
     color:$color-warning
+}
+
+//text align
+.align-center {
+	text-align: center;
 }
 
 //Font Weights
@@ -155,13 +174,12 @@ strong {
 	padding-right: 50px;
 
 	.slick-arrow {
-		width: 30px;
-		height: 30px;
+		width: 13px;
+    	height: 22px;
 		font-size: 0;
 		cursor: pointer;
-		opacity: 0.3;
 		border:0 !important;
-		padding: 44px;
+		padding: 0;
 
 		position: absolute;
 		top:50%;
@@ -175,12 +193,19 @@ strong {
 		}
 	}
 	.slick-prev {
-		left:10px;
+		left:  0;
 		background: url(../img/icon/icn-chev-left-b.svg) no-repeat center;
 	}
 	.slick-next {
-		right: 10px;
+		right: 0;
 		background: url(../img/icon/icn-chev-right-b.svg) no-repeat center;
+	}
+
+	@include media (max-width, 1023px){
+			
+		.slick-arrow {
+			top:50%;
+		}
 	}
 }
 
