--- a/resources/css/scss/pages/_contact.scss
+++ b/resources/css/scss/pages/_contact.scss
@@ -57,6 +57,11 @@
             margin-right: 20px;
         }
     }
+
+    @include media (max-width, 1023px) {
+        padding: 60px 0;
+    }
+
 }
 
 .gform_wrapper {
@@ -78,7 +83,7 @@
     }
 
     @include media (max-width, 425px){        
-        width: 80%;
+        width: 100%;
     }
 }
 
@@ -109,4 +114,12 @@
         }
     }
 
+}
+
+.career-form {
+    @include media (max-width, 10923px) {
+        .gform_button {
+            width: 100%;
+        }
+    }
 }
