--- a/resources/css/scss/pages/_inner.scss
+++ b/resources/css/scss/pages/_inner.scss
@@ -1,15 +1,29 @@
-.page-content {
+
+.home {
     
     @include media (max-width, 1023px) {
-        padding: 20px 0;
+        .page-content{
+            padding: 0;
+        }
     }
 }
 
 .section {
     padding: 40px 0;
 
+    .wp-block-group__inner-container{
+        ul,ol{
+            padding-left: 30px;
+        }
+    }
     @include media (max-width, 600px) {
         padding: 20px 0;
+
+        .wp-block-group__inner-container{
+            ul,ol{
+                padding-left: 15px;
+            }
+        }
     }
 }
 
@@ -33,6 +47,7 @@
     .button {
         padding: 0 !important;
         min-width: auto !important;
+        margin-bottom: 0;
     }
 }
 
@@ -64,6 +79,17 @@
     letter-spacing: 0.2em;
 }
 
+.wp-block-group.alignfull {
+        
+    @include media(min-width, 1024px){
+        .wp-block-group__inner-container {
+            padding-left: 0;
+            padding-right: 0;
+        }
+        
+    }
+}
+
 .wp-block-group__inner-container {
 	max-width: $grid-container;
 	padding-left:0;
@@ -73,11 +99,22 @@
     
         
     @include media(max-width, 1440px){
-        padding-left: 20px;
-        padding-right: 20px;
+        padding-left: 30px;
+        padding-right: 30px;
     }
     
 }
+
+.image_box > .wp-block-group__inner-container {
+        
+    @include media(max-width, 1440px){        
+        padding-left: 0 !important;
+        padding-right: 0 !important;
+    }
+        
+}
+
+
 .wp-block-group__inner-container .wp-block-group__inner-container {
 	padding-left: 0;
 	padding-right: 0;
@@ -122,8 +159,8 @@ p.icon_text {
             &:before {
                 content: url('../img/icon/icn-corner.svg');
                 position: absolute;
-                left: 0;
-                top:0;
+                left:  -1px;
+                top: -1px;
             }
 
         }
@@ -133,7 +170,7 @@ p.icon_text {
             figure {
     
                 &:before {
-                    left: 0;
+                    left: -1px;
                 }    
             }
         }
@@ -143,7 +180,7 @@ p.icon_text {
             figure {
     
                 &:before {
-                    right: 0;
+                    right: -1px;
                 }    
             }
         }
@@ -158,17 +195,17 @@ p.icon_text {
 .pentagon {
         
     position: absolute;
-    top:0;
+    top: -1px;
     right: auto;
-    left: 0;
+    left: -1px;
 
     &.left {
         right: auto;
-        left: 0;
+        left: -1px;
     }
 
     &.right {
-        right: 0;
+        right: -1px;
         left: auto;
         transform: scaleX(-1);
     }
@@ -282,3 +319,71 @@ p.icon_text {
         float: right;
     }
 }
+
+.join_team {
+    .gform_wrapper {
+      width: 100%;
+    }
+  
+    .gform_button {
+      width: 265px;
+      padding: 18px 0;
+      font-size: 20px;
+    }
+  
+    .gform_drop_area {
+      display: flex;
+      justify-content: center;
+      gap: 1em;
+      align-items: center;
+      border: 1px dashed #000000;
+      background: transparent;
+      padding: 20px;
+    }
+  
+    .gform_drop_instructions,
+    .gform_button_select_files  {
+        margin-bottom: 0;
+    }
+    
+    .gform_drop_instructions {
+      order: 2;
+      color: #BCBCBC;
+      font-size: 17px;
+      font-weight: 400;
+    }
+
+    .gform_fileupload_rules {
+        display: none;
+    }
+
+    .ginput_container_fileupload {
+        margin-top: 20px
+    }
+  
+    .gform_button_select_files {
+        order: 1;
+        font-size: 0 !important;
+        line-height: 0;
+        background: transparent;
+        padding: 0;
+        margin-right: 10px;
+        
+        &:before {
+			content:  url(../img/icon/icn-fileupload.svg);
+            width: 23px;
+            height: 18px;
+        }
+    }
+
+    @include media (max-width,480px) {
+        .gform_drop_area {
+            flex-direction: column;     
+            gap: 0;   
+        }
+
+        .gform_button {
+            width: 100%;
+        }
+    }
+  }
