--- a/resources/css/scss/sections/_footer.scss
+++ b/resources/css/scss/sections/_footer.scss
@@ -6,6 +6,23 @@
     font-weight: 300;
     padding: 100px 0 60px;
 
+    &.footer_contact {
+        font-size: 15px;
+        font-weight: 300;
+        padding: 29px 0;
+
+        .grid-container {
+            display: flex;
+            justify-content: space-between;
+
+            @include media (max-width, 480px) {
+                justify-content: center;
+                flex-direction: column;
+                align-items: center;
+            }
+        }
+    }
+
     * {
         color: $color-white;
     }
@@ -17,7 +34,7 @@
     }
 
     h4 {
-        color: $color-primary;
+        color: $color-dblue;
         font-family: $heading-font-family;
         margin: 0;
         font-weight: 600;
@@ -72,8 +89,8 @@
                     a{
                         color: #EEF5FF;
                         font-size: 15px;
-                        font-weight: 400;
-                        letter-spacing: 0.05em;
+                        font-weight: 300;
+                        letter-spacing: 0;
                     }
                 }
             }
@@ -194,6 +211,41 @@
         padding: 40px 0;
     }
 
+    @include media(max-width, 1300px) {  
+
+        .foottop {
+            .information {
+                padding-left: 0;
+                justify-content: space-around;
+            } 
+
+        }
+    }   
+
+    @include media(max-width, 1300px) {  
+
+        .foottop {
+            .button {
+                width: 90%;
+            } 
+
+        }
+    }   
+
+
+    @media (max-width: 1240px) and (min-width: 1025px) {  
+
+        .foottop {
+            .information {
+                .information_1 {
+                    margin-right: 20px;
+                    margin-left: 20px;
+                }
+            } 
+
+        }
+    }   
+
     @include media(max-width, 1024px) {  
 
         .foottop {
@@ -207,6 +259,7 @@
                 }
                 .call_us, .find_us, .email_us, .follow_us {
                     margin-bottom: 20px;
+                    font-size: 16px;
                 }
             } 
 
@@ -223,9 +276,7 @@
             }
         }
         
-    }   
-
-    
+    }       
 
     @include media(max-width, 1023px) {
 
