--- a/resources/css/scss/sections/_header.scss
+++ b/resources/css/scss/sections/_header.scss
@@ -1,25 +1,45 @@
 
 body {
-    &.admin-bar {
-		header,
+
+	&:not(.admin-bar) {		
 		.hsnav-s6 {
-			top: 32px !important;
-		}        
-    }
+			top: 0;
+		}			
+	}
+
+    @include media(min-width, 783px) {
+		&.admin-bar {
+			header{
+				top: 32px !important;
+			}      
+		}
+
+		&.admin-bar:not(.home) {
+			.hsnav-s6 {
+				top: 32px !important;
+				
+				&.is-stuck {
+					top: 32px !important;
+				}
+			}        
+		}
+	}
 
     @include media(max-width, 782px) {
-        
-        &.admin-bar {
-			header,
-			.hsnav-s6 {
+		&.admin-bar {
+			header{
 				top: 46px !important;
-				 
-			}       
-            
-        }
+			}              
+		}
+		&.admin-bar:not(.home) {
+
+			.hsnav-s6 {
+				top: 46px;
+			}        
+
+		}
     }
 }
-
 
 .home {
 	header {
@@ -36,7 +56,11 @@ body {
 			.navbar {
 				min-height: 156px;
 			}
-			
+			@include media (max-width, 1365px){
+				.navbar{
+					min-height: auto;
+				}
+			}
 		}
 	}
 }
@@ -52,7 +76,8 @@ body {
 
 /* Header Sticky Nav Style 6 */
 header {
-	position: relative;
+	// position: relative;
+	
 	z-index: 9999;
 	
 	&.overlap {
@@ -65,29 +90,28 @@ header {
 			box-shadow: 0 3px 6px 0 rgba($color-black, 0.16);
 		}
 	}
+
 	.hsnav-s6 {
 		animation: 1s ease-in 0s 1 slideInFromTop;
 		background: $color-black;
 		max-width: none !important;
 
-			
 		.grid-container {
 			max-width: 100%;
 			padding: 0 20px;
 		}
-		
+
 		&.sticky {
 			position: absolute;
-			position: fixed;
 			left: 0;
 			right: 0;
-			top: 0;
+			z-index: 9;
 		}
 		&.is-stuck {
 			position: fixed;
 			background: $color-black;
 			box-shadow: 0 3px 6px 0 rgba($color-black, 0.16);
-				
+			
 			.navbar {
 				min-height: 84px !important;
 			}
@@ -126,7 +150,7 @@ header {
 					a {
 						font-size: 16px;
 						text-transform: uppercase;
-						padding: 18px 20px;
+						padding: 14px 20px;
 						line-height: 1;
 						color: $color-white;
 						letter-spacing: 0.1em;
@@ -145,9 +169,9 @@ header {
 						a {
 		
 							&:hover {
-								background: #52360C;
+								background: #004EBF;
 								color: $color-white;
-								border-radius: 140px;
+								// border-radius: 140px;
 							}
 						}	
 					}
@@ -167,6 +191,9 @@ header {
 							transform: rotate(45deg);
 							right: 20px;
 							margin-top: -6px;
+							@include media(min-width, 1921px){
+								right: 0;
+							}
 						}
 					}
 				}				
@@ -201,14 +228,17 @@ header {
 
 				@include media (max-width, 1600px) {					
 
-					a {
-						font-size: 14px !important;
-						padding: 18px 14px !important;
-					}
-					.is-dropdown-submenu-parent {
-						> a {
-							&:after {
-								right: 0px;
+					.menu-item{
+						a {
+							font-size: 14px;
+						}
+						
+						&.is-dropdown-submenu-parent {
+							> a {
+								padding-right: 25px;
+								&:after {
+									right: 8px;
+								}
 							}
 						}
 					}
@@ -232,12 +262,18 @@ header {
 						}
 					}
 				}
+				@include media (max-width, 1254px){
+					.menu-item {
+						a {
+							padding: 14px 15px;
+						}
+					}
+				}
 			}
 
 
 			.navutil {
 				float: right;
-				padding-left: 15px;
 				min-height: 100%;
 				width: auto;
 				align-items: center;
@@ -249,7 +285,7 @@ header {
 					text-transform: capitalize;
 					transition: all 0.3s ease;
 					position: relative;
-					font-size: 18px !important;
+					font-size: 18px;
     				font-weight: 700;
 					align-items: center;
 
@@ -303,7 +339,7 @@ header {
 				width: 50px; 
 				height: 50px; 
 				position: absolute;  
-				right: 0; 
+				right: -10px; 
 				font-size: 0; 
 				cursor: pointer; 
 				display: block;
@@ -359,38 +395,23 @@ header {
 					display: none;
 				}
 			}
-			@include media(max-width, 1440px) {
+
+			@media (max-width: 1440px) {
 				
 				.navmenu {
-					a {
-						padding: 18px 12px !important;
-						font-size: 14px !important;
-					}
-					.is-dropdown-submenu-parent {
-
-						> a {
-							&:after {
-								right: 0;
-							}
+					.menu-item{
+						.is-dropdown-submenu-parent {
+							> a {
+								&:after {
+									right: 0;
+								}
+							}							
 						}
 					}
 				}
 			}
 
-			@include media(max-width, 1320px) {
-				
-				.navmenu {
-					a {
-						padding: 18px 9px !important;
-					}
-				}
-			}
-
 			@include media(max-width, 1366px) {
-				
-				.logo, .navlogo { 
-					//margin-left: 30px;
-				}
 
 				.navmenu {
 					a {
@@ -400,12 +421,50 @@ header {
 				}
 			}
 
-			@include media(max-width, 1280px){
+			@include media(max-width, 1366px){
+				
+				.logo, .navlogo {
+					figure {
+						img {
+							width: 250px;
+						}
+					}
+				}
+			}
+
+			@include media(max-width, 1240px){
+				
+				.logo, .navlogo {
+					figure {
+						img {
+							width: 220px;
+						}
+					}
+				}
+
+				.navmenu {
+					.menu-item {
+						a {
+							padding: 14px 15px;
+						}
+					}
+				}
+			}
+			
+			@include media(max-width, 1120px){
 				
 				.logo, .navlogo {
 					figure {
 						img {
 							width: 180px;
+						}
+					}
+				}
+
+				.navmenu {
+					.menu-item {
+						a {
+							padding: 14px 10px;
 						}
 					}
 				}
@@ -431,11 +490,13 @@ header {
 					top: 100px;
 					height: calc(100vh - 120px);
 					left: 100%;
+					display:  none;
 					right: 0;
 					background: $color-dark;
 					transition:all 0.5s ease;
 					overflow: auto;
 					padding: 20px;
+					z-index: 999999999999999999; 
 
 					.button {
 						width: 100%;
@@ -470,7 +531,7 @@ header {
 								font-weight: 400; 
 								color: $color-white;
 								position: relative;
-								padding: 0 0 10px;
+								padding: 0 0 20px;
 
 								&:before {
 									position: absolute; 
@@ -481,7 +542,7 @@ header {
 							}
 							ul {
 								margin-top: 10px;
-								margin-bottom: 50px;
+								margin-bottom: 10px;
 								padding: 0;
 								padding-top: 20px;
 								border-top: 1px solid #fff;
@@ -548,16 +609,10 @@ header {
 	@include media (min-width, 1921px){
 		
 		.grid-container {
-			max-width: 1410px !important;
+			max-width: 1903px !important;
 			padding: 0;
 		}
 
-		.navbar {
-			.navmenu a {
-				padding: 18px 12px!important;
-				font-size: 14px!important;
-			}
-		}
 	}
 
 	@include media (max-width, 425px){
@@ -601,15 +656,6 @@ header {
 				max-width: 1410px;
 			}
 
-			.navbar {
-				
-				.navmenu {
-					a {
-						padding: 18px 10px;
-					}
-				}
-			}
-
 		}
 	}
 
@@ -617,12 +663,6 @@ header {
 		.hsnav-s6 {
 
 			.navbar {
-				
-				.navmenu {
-					a {
-						padding: 18px 8px;
-					}
-				}
 
 				.navutil {
 
@@ -636,22 +676,7 @@ header {
 
 		}
 	}
-	@include media (max-width, 1120px){
-		.hsnav-s6 {
-
-			.navbar {
-
-				.logo, .navlogo {
-					figure {
-						img {
-							width: 150px;
-						}
-					}
-				}
-			}
-		}
-	}
-	@include media (max-width, 1143px){
+	@include media (max-width, 1169px){
 		.hsnav-s6 {
 
 			.navbar {
@@ -661,6 +686,14 @@ header {
 						font-size: 13px !important;
 					}
 				}
+			}
+		}
+	}
+
+	@include media (max-width, 1143px){
+		.hsnav-s6 {
+
+			.navbar {
 
 				.navutil {
 					padding-left:0;
@@ -673,12 +706,6 @@ header {
 					}
 				}
 				
-				.navmenu {
-					a {
-						font-size:13px;
-						padding: 18px 6px;
-					}
-				}
 			}
 
 		}
